# FluxAgent

./: .env.example  Dockerfile  docker-compose.yml  project-summary.md  pyproject.toml  requirements.txt  run_api.sh  run_ui.sh
app/agents/: base_agent.py  research_agent.py  supervisor_agent.py
app/api/: main.py
app/api/models/: requests.py  responses.py
app/api/routes/: chat.py
app/core/: config.py  llm.py  memory.py
app/graph/: nodes.py  state.py  workflow.py
app/tools/: calculator.py  file_handler.py  web_search.py
app/utils/: logger.py
docs/: README.md  setup.md
tests/: test_agents.py  test_api.py  test_graph.py
ui/: streamlit_app.py
ui/components/: agent_monitor.py  chat_interface.py  sidebar.py
ui/styles/: custom.css
